--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "digital-mask",
   "description": "Easy digital mask for string and inputs",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "keywords": [
-		"mask",
-		"pattern",
-		"format",
-		"text",
-		"input"
+    "mask",
+    "pattern",
+    "format",
+    "text",
+    "input"
   ],
   "license": "MIT",
   "author": {
@@ -17,20 +17,22 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "lint": "eslint ./src --ext .ts --fix",
-    "test": "mocha",
+    "lint": "eslint ./src ./test --ext .ts --fix",
+    "test": "ts-mocha ./test/*.ts",
     "build": "gulp"
   },
   "devDependencies": {
     "@neki-dev/eslint-config": "github:neki-dev/eslint-config",
+    "@types/mocha": "^9.1.0",
+    "@types/node": "^17.0.23",
     "gulp": "^4.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
-    "mocha": "^9.2.2",
+    "ts-mocha": "^9.0.2",
     "typescript": "^4.6.3"
   },
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/neki-dev/digital-mask.git"
-	}
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neki-dev/digital-mask.git"
+  }
 }
