--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "noImplicitAny": true,
     "module": "commonjs",
-    "target": "es2017",
+    "target": "esnext",
     "esModuleInterop": true,
     "declaration": true
   },
-  "include": ["./**/*.ts"]
+  "include": ["./src/**/*.ts", "./test/**/*.ts"]
 }
