--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@neki-dev/eslint-config": "github:neki-dev/eslint-config",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.23",
+    "mocha": "^10.0.0",
     "terser-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.3.0",
     "ts-mocha": "^9.0.2",
