--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "digital-mask",
   "description": "Easy digital mask for string and inputs",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "keywords": [
     "mask",
     "pattern",
@@ -17,20 +17,21 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "lint": "eslint ./src ./test --fix",
+    "lint": "eslint \"src/**/*.ts\" --fix",
     "test": "ts-mocha ./test/*.ts",
     "build": "webpack --mode production"
   },
   "devDependencies": {
-    "@neki-dev/eslint-config": "github:neki-dev/eslint-config",
+    "eslint": "^8.24.0",
+    "eslint-config-neki": "^1.0.2",
     "@types/mocha": "^9.1.0",
     "mocha": "^10.0.0",
-    "terser-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.3.0",
-    "ts-mocha": "^9.0.2",
-    "typescript": "^4.6.3",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.7.2"
+    "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.1",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "repository": {
     "type": "git",
